fix: align small cells

--- a/styles/ricardo_stylesheet.css
+++ b/styles/ricardo_stylesheet.css
@@ -110,10 +110,10 @@ div.split_cell{
     width: 50%  !important;}
 div.split_cell_large{
     float: left !important;
-    width: 65%  !important;}
+    width: 67%  !important;}
 div.split_cell_small{
     float: left !important;
-    width: 32%  !important;}
+    width: 33%  !important;}
 
 </style>
 
